issue with images overlapping footer resolved

--- a/resources/css/product-configurator.module.css
+++ b/resources/css/product-configurator.module.css
@@ -12,7 +12,6 @@
     align-self: flex-start;
     position: sticky;
     top: 0;
-    z-index: 3;
 }
 
 .rightSideConfiguratorWrapper {
